compiler/src/test/resources/golden/errors/loop_jump_crosses_lambda.dawn
pub fn main() -> Unit !io = {
  for x in [1, 2, 3] {
    let f = fn() => { break }
    f()
  }
}
