compiler/src/test/resources/golden/errors/loop_jump_crosses_lambda.err
error: `break` cannot cross a lambda boundary to reach the loop outside
  --> loop_jump_crosses_lambda.dawn:3:23
  |
3 |     let f = fn() => { break }
  |                       ^^^^^
  = hint: a lambda is its own function: use `return` to exit it, or restructure the loop
